--- a/webapp/templates/webapp/seasoninfo.html
+++ b/webapp/templates/webapp/seasoninfo.html
@@ -13,7 +13,7 @@
 <a href="/serieinfo/{{id}}/seasoninfo/{{next_page}}/{{nb_seasons}}" class="next">Next &raquo;</a>
 
 <!-- Si le numéro de série est 1 il faut vérifier s'il y a une saison précédente pour les flèches -->
-{% elif page == 1 %}
+{% elif page == 1 and nb_seasons != 1 %}
 {% if season_info.prev_season == 0 %}
 <!-- Dans ce cas, pas de saison 0 -->
 <a href="/serieinfo/{{id}}/seasoninfo/{{next_page}}/{{nb_seasons}}" class="next">Next &raquo;</a>
@@ -24,8 +24,10 @@
 {% endif %}
 
 <!-- Il s'agit de la dernière saison, on ne peut aller sur la page suivante donc on ne met que le bouton précédent -->
-{% elif page == nb_seasons %}
+{% elif page == nb_seasons and page != 1 %}
 <a href="/serieinfo/{{id}}/seasoninfo/{{previous_page}}/{{nb_seasons}}" class="previous">&laquo; Previous</a>
+
+{% elif page == nb_seasons and page == 1 %}
 
 <!-- Saison qui a une précédente et une suivante -->
 {% else %}
