--- a/webapp/templates/webapp/signup.html
+++ b/webapp/templates/webapp/signup.html
@@ -5,7 +5,7 @@
 Vous êtes connecté, {{ user.username }} !
 {% else %}
     <h2>Sign up !</h2>
-    <form method="post",action=".">
+    <form class="signup" method="post",action=".">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Sign up</button>
